--- a/angular.json
+++ b/angular.json
@@ -69,10 +69,12 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "ceps:build:production"
+              "browserTarget": "ceps:build:production",
+              "port": 8080
             },
             "development": {
-              "browserTarget": "ceps:build:development"
+              "browserTarget": "ceps:build:development",
+              "port": 8080
             }
           },
           "defaultConfiguration": "development"
