--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ceps": {
+    "news-oitenta": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ceps",
+            "outputPath": "dist/news-oitenta",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -69,11 +69,11 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "ceps:build:production",
+              "browserTarget": "news-oitenta:build:production",
               "port": 8080
             },
             "development": {
-              "browserTarget": "ceps:build:development",
+              "browserTarget": "news-oitenta:build:development",
               "port": 8080
             }
           },
@@ -82,7 +82,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ceps:build"
+            "browserTarget": "news-oitenta:build"
           }
         },
         "test": {
