--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ceps",
+  "name": "news-oitenta",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "liveserver": "^0.1.20",
+    "nvm": "^0.0.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
