--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular-devkit/build-angular": "^14.2.8",
     "@angular/cli": "~14.2.8",
     "@angular/compiler-cli": "^14.2.0",
+    "@schematics/angular": "^15.0.0",
     "@types/jasmine": "~4.0.0",
     "autoprefixer": "^10.4.13",
     "jasmine-core": "~4.3.0",
